<resources>
    <string name="app_name">SignInAmazon</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="sideBar_navigation_drawer_open">Open navigation drawer</string>
    <string name="sideBar_navigation_drawer_close">Close navigation drawer</string>

    <string name="auth_btn_text_not_fill">Not all fields filled</string>
    <string name="auth_signingIn">Signing in…</string>
    <string name="auth_btn_reg">Registration</string>
    <string name="auth_ed_pass_hint">Password</string>
    <string name="auth_fill_screen">fill_screen</string>
    <string name="auth_btn_text_signin">Sign in</string>
    <string name="auth_ed_confirmPass_hint">Confirm password</string>

    <string name="reg_ed_email_hint">Email</string>
    <string name="reg_ed_name_hint">Name</string>
    <string name="reg_btn_text_signin">Sign up</string>
    <string name="regSuccess">Register Successful</string>
    <string name="not_confirmed">Error! This user must be confirmed!</string>
    <string name="pass_not_equals">Password not equals!</string>
    <string name="user_not_confirmed">User must be confirmed</string>

    <string name="confirmReg_text">Enter confirmation code</string>
    <string name="confirm">Confirm</string>
    <string name="reg_activity_name">Registration</string>
    <string name="profile_activity_name">Profile</string>
    <string name="confirm_success">Confirm successful</string>


    <string name="loginStr">User: %s></string>
    <string name="nameStr">Name: %s></string>
    <string name="emailStr">Email: %s></string>

    <string name="header_emptyProfile" />
    <string name="error_gettingRegisterParams">Some error in register result</string>
    <string name="no_editable">No editable</string>

    <string name="don_t_have_an_account_sign_up">Don\'t have an account? <b>Sign up</b></string>
    <string name="login">Login</string>
    <string name="hello_world">Hello World</string>
    <string name="header_email">Email</string>
    <string name="auth_name">Name</string>
    <string name="auth_login">Login</string>
    <string name="sideBar_sign_in">Sign in</string>
    <string name="sideBar_sign_up">Sign Up</string>
    <string name="sideBar_sign_out">Sign Out</string>
    <string name="sideBar_exit">Exit</string>
    <string name="hello_user">Hello User</string>
    <string name="phone_number">Phone Number</string>
</resources>
